<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/currency_view_margin"
    android:layout_marginEnd="@dimen/currency_view_margin"
    android:layout_marginBottom="@dimen/currency_view_margin">

    <TextView
        android:id="@+id/code"
        android:text="@string/currency_code_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_marginEnd="@dimen/currency_view_text_margin"/>


    <TextView
        android:id="@+id/name"
        android:text="@string/currency_name_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_marginEnd="@dimen/currency_view_text_margin"/>


    <TextView
        android:id="@+id/symbol"
        android:text="@string/currency_symbol_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

</LinearLayout>