<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.SecondFragment">

    <!-- Флаг, название, регион, столицу, валюту, таймзоны -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_two_text_margin"
            android:gravity="center"
            android:text="@string/country_name_preview"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />


        <ImageView
            android:id="@+id/flagImage"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/flag"
            android:scaleType="centerCrop"
            android:src="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_two_text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fragment_two_text_margin"
                android:text="@string/region"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <TextView
                android:id="@+id/region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_preview"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_two_text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fragment_two_text_margin"
                android:text="@string/capital"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <TextView
                android:id="@+id/capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_preview"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        </LinearLayout>

        <TextView
            android:id="@+id/currenciesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/fragment_two_text_margin"
            android:layout_marginEnd="@dimen/fragment_two_text_margin"
            android:text="@string/currencies"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

        <LinearLayout
            android:id="@+id/currencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/fragment_two_text_margin"
            android:layout_marginEnd="@dimen/fragment_two_text_margin"/>

        <TextView
            android:id="@+id/timezonesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/fragment_two_text_margin"
            android:layout_marginEnd="@dimen/fragment_two_text_margin"
            android:text="@string/timezones"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

        <LinearLayout
            android:id="@+id/timezones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/fragment_two_text_margin"
            android:layout_marginEnd="@dimen/fragment_two_text_margin"/>
    </LinearLayout>

</ScrollView>